--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enter Vehicle Info</title>
-    <link rel="icon" href="/images/car-service.png" type="image/x-icon">
+    <link rel="icon" href="https://mounted100.github.io/Vehicle-maintenance/images/car-service.png" type="image/x-icon">
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
